# src/controllers/authController.ts
@@ -5,17 +5,17 @@ DESCRIPTION
 Handles login, refresh, etc
 ------------------------------------------------------------------------*/
 
-import { Route, Post, Tags, Put } from "tsoa";
+import { Route, Post, Tags, Put, Body } from "tsoa";
 import { LoginResponse } from "../Core/Messages/Responses/Auth/LoginResponse";
 import { BaseController } from "./BaseController";
 import { RefreshRequest } from "../Core/Messages/Requests/Auth/RefreshRequest";
-import { LoginRequest } from "Core/Messages/Requests/Auth/LoginRequest";
+import { LoginRequest } from "../Core/Messages/Requests/Auth/LoginRequest";
 
 @Route("Auth")
 @Tags("Auth")
 export class AuthController extends BaseController {
 	@Post("Login")
-	public async Login(request: LoginRequest): Promise<LoginResponse> {
+	public async Login(@Body() request: LoginRequest): Promise<LoginResponse> {
 		return this.InternalServerError({
 			Success: false,
 			RefreshToken: "Not Implemented",
@@ -23,7 +23,7 @@ export class AuthController extends BaseController {
 	}
 
 	@Put("Refresh")
-	public async Refresh(request: RefreshRequest): Promise<LoginResponse> {
+	public async Refresh(@Body() request: RefreshRequest): Promise<LoginResponse> {
 		return this.InternalServerError({
 			Success: false,
 			RefreshToken: "Not Implemented",
